<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:tohell="http://schemas.android.com/apk/res/com.ctrip.protoshop"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_f0f0f0"
    android:orientation="vertical"
    tools:context=".SettingActivity" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_014eb6"
        android:padding="@dimen/_7" >

        <!-- android:text="@string/fa_angle_left" -->

        <com.ctrip.protoshop.widget.IconView
            android:id="@+id/setting_back_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:paddingRight="@dimen/_5"
            android:text="@string/fa_angle_left"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/setting_title_text"
            android:textColor="@color/white"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/save_nick_name_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/_5"
            android:text="Save"
            android:textAppearance="@style/text_ffffff_20"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10"
                android:layout_marginTop="@dimen/_20"
                android:background="@drawable/white_gray_line_backgroud" >

                <com.ctrip.protoshop.widget.IconView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/show_email_view"
                    android:layout_alignParentLeft="true"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/_5"
                    android:paddingLeft="@dimen/_15"
                    android:paddingRight="@dimen/_10"
                    android:paddingTop="@dimen/_10"
                    android:text="@string/fa_list_alt"
                    android:textAppearance="@style/text_icon" />

                <TextView
                    android:id="@+id/show_email_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/textView1"
                    android:background="@drawable/one_line_shape_backgroud"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/_5"
                    android:paddingRight="@dimen/_10"
                    android:paddingTop="@dimen/_10"
                    android:text="admin@ctrip.com"
                    android:textAppearance="@style/text_a3a3a3_20" />

                <com.ctrip.protoshop.widget.IconView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/nick_name_view"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/textView1"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/_10"
                    android:paddingLeft="@dimen/_15"
                    android:paddingRight="@dimen/_10"
                    android:paddingTop="@dimen/_5"
                    android:text="@string/fa_user"
                    android:textAppearance="@style/text_icon" />

                <EditText
                    android:id="@+id/nick_name_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/show_email_view"
                    android:layout_toRightOf="@+id/textView3"
                    android:background="@null"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:hint="@string/user_name_hint_text"
                    android:paddingBottom="@dimen/_10"
                    android:paddingRight="@dimen/_10"
                    android:paddingTop="@dimen/_5"
                    android:singleLine="true"
                    android:textAppearance="@style/text_000000_20"
                    android:textColorHint="@color/gray_a3a3a3" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/psw_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10"
                android:layout_marginTop="@dimen/_10"
                android:background="@drawable/white_gray_line_backgroud" >

                <com.ctrip.protoshop.widget.IconView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/textView51"
                    android:layout_alignParentLeft="true"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/_10"
                    android:paddingLeft="@dimen/_15"
                    android:paddingRight="@dimen/_10"
                    android:paddingTop="@dimen/_10"
                    android:text="@string/fa_lock"
                    android:textAppearance="@style/text_icon" />

                <TextView
                    android:id="@+id/textView51"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/textView4"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/_10"
                    android:paddingRight="@dimen/_10"
                    android:paddingTop="@dimen/_10"
                    android:text="Change Password"
                    android:textAppearance="@style/text_000000_20" />

                <com.ctrip.protoshop.widget.IconView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/textView51"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/_10"
                    android:paddingLeft="@dimen/_15"
                    android:paddingRight="@dimen/_10"
                    android:paddingTop="@dimen/_10"
                    android:text="@string/fa_angle_right"
                    android:textAppearance="@style/text_icon" />
            </RelativeLayout>

            <com.ctrip.protoshop.widget.AnimationButton
                android:id="@+id/clear_cache_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tohell:animation_text="Confirm?"
                tohell:content_text="Clear Cache"
                tohell:icon_text="@string/fa_trash_o" />

            <RelativeLayout
                android:id="@+id/feedback_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10"
                android:layout_marginTop="@dimen/_5"
                android:background="@drawable/white_gray_line_backgroud"
                android:gravity="center_vertical" >

                <com.ctrip.protoshop.widget.IconView
                    android:id="@+id/iconView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/textView52"
                    android:layout_alignParentLeft="true"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/_10"
                    android:paddingLeft="@dimen/_15"
                    android:paddingRight="@dimen/_10"
                    android:paddingTop="@dimen/_10"
                    android:text="@string/fa_envelope"
                    android:textAppearance="@style/text_icon" />

                <TextView
                    android:id="@+id/textView52"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/iconView"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/_10"
                    android:paddingRight="@dimen/_10"
                    android:paddingTop="@dimen/_10"
                    android:text="Feedback"
                    android:textAppearance="@style/text_000000_20" />

                <View
                    android:id="@+id/tag"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_alignRight="@+id/iconView"
                    android:layout_below="@+id/textView52" />

                <RelativeLayout
                    android:id="@+id/feedback_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/textView52"
                    android:layout_toRightOf="@+id/tag"
                    android:visibility="gone" >

                    <EditText
                        android:id="@+id/feedback_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@null"
                        android:ems="10"
                        android:gravity="top"
                        android:hint="@string/feed_back_hint_text"
                        android:minLines="5" >
                    </EditText>

                    <TextView
                        android:id="@+id/feedback_send_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/feedback_editText"
                        android:paddingBottom="@dimen/_10"
                        android:paddingLeft="@dimen/_5"
                        android:paddingRight="@dimen/_10"
                        android:paddingTop="@dimen/_10"
                        android:text="Send"
                        android:textColor="@color/orange_ffd5b8"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/show_text_count_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/feedback_send_view"
                        android:layout_alignTop="@+id/feedback_send_view"
                        android:layout_toLeftOf="@+id/feedback_send_view"
                        android:gravity="center"
                        android:text="240"
                        android:textColor="@color/gray_dddddd" />
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/contribute_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10"
                android:layout_marginTop="@dimen/_10"
                android:background="@drawable/white_gray_line_backgroud" >

                <com.ctrip.protoshop.widget.IconView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/textView51"
                    android:layout_alignParentLeft="true"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/_10"
                    android:paddingLeft="@dimen/_15"
                    android:paddingRight="@dimen/_10"
                    android:paddingTop="@dimen/_10"
                    android:text="@string/fa_jpy"
                    android:textAppearance="@style/text_icon" />

                <TextView
                    android:id="@+id/textView51"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/textView4"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/_10"
                    android:paddingRight="@dimen/_10"
                    android:paddingTop="@dimen/_10"
                    android:text="Buy Me a coffee"
                    android:textAppearance="@style/text_000000_20" />

                <com.ctrip.protoshop.widget.IconView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/textView51"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/_10"
                    android:paddingLeft="@dimen/_15"
                    android:paddingRight="@dimen/_10"
                    android:paddingTop="@dimen/_10"
                    android:text="@string/fa_angle_right"
                    android:textAppearance="@style/text_icon" />
            </RelativeLayout>

            <com.ctrip.protoshop.widget.AnimationButton
                android:id="@+id/logout_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tohell:animation_text="Confirm?"
                tohell:content_text="Logout"
                tohell:icon_text="@string/fa_power_off" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_20"
                    android:layout_marginRight="@dimen/_20"
                    android:layout_marginBottom="@dimen/_20"
                    android:gravity="center_vertical"
                    android:text="@string/setting_text" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>