<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_f0f0f0"
    android:orientation="vertical"
    tools:context=".ChangePswActivity" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_014eb6"
        android:padding="@dimen/_7" >

        <!-- android:text="@string/fa_angle_left" -->

        <com.ctrip.protoshop.widget.IconView
            android:id="@+id/change_psw_back_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:paddingRight="@dimen/_5"
            android:text="@string/fa_angle_left"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/change_psw_title_text"
            android:textColor="@color/white"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/change_save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/_5"
            android:text="Save"
            android:textAppearance="@style/text_ffffff_20"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/edite_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10"
            android:layout_marginTop="@dimen/_10"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/psw_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10"
                android:layout_marginTop="@dimen/_10"
                android:background="@drawable/white_gray_line_backgroud" >

                <com.ctrip.protoshop.widget.IconView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/textView51"
                    android:layout_alignParentLeft="true"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/_10"
                    android:paddingLeft="@dimen/_15"
                    android:paddingRight="@dimen/_10"
                    android:paddingTop="@dimen/_10"
                    android:text="@string/fa_lock"
                    android:textAppearance="@style/text_icon" />

                <EditText
                    android:id="@+id/current_psw_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_margin="@dimen/_5"
                    android:layout_toRightOf="@+id/textView4"
                    android:background="@null"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:hint="Current Password"
                    android:inputType="textPassword"
                    android:paddingBottom="@dimen/_5"
                    android:paddingRight="@dimen/_10"
                    android:paddingTop="@dimen/_5"
                    android:singleLine="true" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10"
                android:layout_marginTop="@dimen/_10"
                android:background="@drawable/white_gray_line_backgroud" >

                <com.ctrip.protoshop.widget.IconView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/_10"
                    android:paddingLeft="@dimen/_15"
                    android:paddingRight="@dimen/_10"
                    android:paddingTop="@dimen/_10"
                    android:text="@string/fa_lock"
                    android:textAppearance="@style/text_icon" />

                <EditText
                    android:id="@+id/new_psw_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/textView1"
                    android:background="@drawable/one_line_shape_backgroud"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:hint="New Password"
                    android:inputType="textPassword"
                    android:paddingBottom="@dimen/_10"
                    android:paddingRight="@dimen/_10"
                    android:paddingTop="@dimen/_10"
                    android:singleLine="true" />

                <com.ctrip.protoshop.widget.IconView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/textView1"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/_10"
                    android:paddingLeft="@dimen/_15"
                    android:paddingRight="@dimen/_10"
                    android:paddingTop="@dimen/_10"
                    android:text="@string/fa_lock"
                    android:textAppearance="@style/text_icon" />

                <EditText
                    android:id="@+id/retype_psw_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/new_psw_view"
                    android:layout_toRightOf="@+id/textView3"
                    android:background="@null"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:hint="Re-type Password"
                    android:inputType="textPassword"
                    android:paddingBottom="@dimen/_10"
                    android:paddingRight="@dimen/_10"
                    android:paddingTop="@dimen/_10"
                    android:singleLine="true"
                    android:textColorHint="@color/gray_a3a3a3" />
            </RelativeLayout>
        </LinearLayout>

        <include
            android:id="@+id/change_psw_loading_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            layout="@layout/loading_layout"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>